# CoHAN2.0

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  LICENSE  ReadME.md  compile.sh  install-deps.sh
docker/melodic/: Dockerfile  bashrc  env.sh  run-docker.sh
docker/noetic/: Dockerfile  bashrc  build-docker.sh  env.sh  run-docker.sh
src/: LICENSE
src/CoHAN_Navigation/cohan_navigation/: CMakeLists.txt
src/CoHAN_Navigation/cohan_navigation/rviz/: cohan_nav_stage.rviz  cohan_nav_stage_human.rviz
src/CoHAN_Navigation/cohan_navigation/scripts/: optitrack_human.py
src/agent_path_prediction/: CMakeLists.txt  package.xml
src/agent_path_prediction/cfg/: AgentPathPrediction.cfg  goals_adream.yaml
src/agent_path_prediction/include/agent_path_prediction/: agent_path_prediction.h  agents_class.h  predict_goal.h  predict_goal_ros.h
src/agent_path_prediction/msg/: AgentPose.msg  AgentsInfo.msg  HumanInfo.msg  PredictedGoal.msg  PredictedGoals.msg  PredictedPoses.msg
src/agent_path_prediction/src/: agent_path_prediction.cpp  agents_class.cpp  predict_goal_ros.cpp
src/agent_path_prediction/srv/: AgentGoal.srv  AgentPosePredict.srv
src/cohan2.0_navigation/: README.md
src/cohan2.0_navigation/cohan2_navigation/: CMakeLists.txt  package.xml
src/cohan2.0_navigation/cohan2_navigation/maps/: empty_map.yaml
src/cohan2.0_navigation/cohan_multiverse_navigation/: CMakeLists.txt  package.xml
src/cohan2.0_navigation/cohan_multiverse_navigation/launch/: cohan_mujoco_tiago.launch
src/cohan2.0_navigation/cohan_multiverse_navigation/scripts/: agents_bridge.py  human_controller.py
src/cohan2.0_navigation/cohan_pr2_navigation/scripts/: optitrack_human.py
src/cohan2.0_navigation/cohan_sim_navigation/: CMakeLists.txt  package.xml  pub_goals.py
src/cohan2.0_navigation/cohan_sim_navigation/config/human/: global_costmap_params_human.yaml  hateb_local_planner_params_human.yaml  local_costmap_params_human.yaml
src/cohan2.0_navigation/cohan_sim_navigation/config/robot/: global_costmap_params.yaml  hateb_local_planner_params.yaml  hateb_local_planner_params_nh.yaml  local_costmap_params.yaml
src/cohan2.0_navigation/cohan_sim_navigation/launch/: cohan_sim_pr2.launch  cohan_sim_pr2_human.launch
src/cohan2.0_navigation/cohan_sim_navigation/launch/cohan_sim/: cohan_sim_human.launch  cohan_sim_pr2.launch  cohan_sim_pr2_human.launch
src/cohan2.0_navigation/cohan_sim_navigation/launch/cohan_sim/include/: agent_tracking.launch  agent_with_ns.launch  move_base_nav.launch  robo_description.launch  robot_only.launch
src/cohan2.0_navigation/cohan_sim_navigation/launch/include/: agent_tracking.launch  agent_with_ns.launch  localization.launch  move_base_nav.launch  robo_description.launch  robot_only.launch
src/cohan2.0_navigation/cohan_sim_navigation/maps/: bremen_kitchen.yaml  empty.yaml  hospital.yaml  junctions.yaml  laas.pgm  laas.yaml  mall.yaml  open.yaml
src/cohan2.0_navigation/cohan_sim_navigation/rviz/: cohan_sim.rviz  cohan_sim_human.rviz
src/cohan2.0_navigation/cohan_sim_navigation/scripts/: agents_bridge.py  publish_joints.py
src/cohan2.0_navigation/cohan_stage_navigation/: CMakeLists.txt  package.xml
src/cohan2.0_navigation/cohan_stage_navigation/config/: move_base_params.yaml
src/cohan2.0_navigation/cohan_stage_navigation/launch/: stage_pr2.launch  stage_pr2_human.launch  stage_pr2_with_human_agent.launch
src/cohan2.0_navigation/simulators/cohan_sim/: CMakeLists.txt  package.xml  setup.py
src/cohan2.0_navigation/simulators/cohan_sim/config/: junctions.yaml  laas.yaml
src/cohan2.0_navigation/simulators/cohan_sim/include/cohan_sim/: sim.hpp  simros.hpp
src/cohan2.0_navigation/simulators/cohan_sim/src/: run_sim.cpp  run_sim.py  sim.c  sim.cpp  simros.cpp
src/cohan_layers/: CMakeLists.txt  package.xml
src/cohan_layers/cfg/: AgentStaticLayer.cfg  AgentVisibilityLayer.cfg
src/cohan_layers/scripts/: agent_filter.py
src/cohan_layers/src/: agent_layer.cpp  agent_visibility_layer.cpp  static_agent_layer.cpp
src/cohan_msgs/: CMakeLists.txt  package.xml
src/cohan_msgs/msg/: AgentPath.msg  AgentTrajectory.msg  AgentTrajectoryArray.msg  AgentTrajectoryArrayStamped.msg  PassageType.msg  TrackedAgent.msg  Trajectory.msg  TrajectoryPoint.msg
src/cohan_msgs/srv/: GetTrajectory.srv  Optimize.srv
src/cohan_tutorial/: CMakeLists.txt  package.xml
src/cohan_tutorial/config/: local_costmap_params.yaml
src/cohan_tutorial/launch/: agents.launch  move_base_cohan.launch
src/cohan_tutorial/maps/: laas.yaml
src/cohan_tutorial/rviz/: cohan_tutorial.rviz
src/cohan_tutorial/scripts/: agents_bridge.py
src/hateb_local_planner/: CMakeLists.txt  package.xml
src/hateb_local_planner/behavior_trees/: all_modes.xml
src/hateb_local_planner/cfg/: HATebLocalPlannerReconfigure.cfg
src/hateb_local_planner/cmake_modules/: FindG2O.cmake
src/hateb_local_planner/launch/: bt_switch.launch
src/hateb_local_planner/msg/: FeedbackMsg.msg  OptimizationCost.msg  PlanningMode.msg
src/hateb_local_planner/scripts/: static_plan_visualizer.py
src/hateb_local_planner/src/: backoff.cpp  hateb_config.cpp  hateb_local_planner_ros.cpp  mode_switch.cpp  obstacles.cpp  optimal_planner.cpp  recovery_behaviors.cpp  timed_elastic_band.cpp  visualization.cpp
src/invisible_humans_detection/: CMakeLists.txt  package.xml
src/invisible_humans_detection/cfg/: laser_config.yaml
src/invisible_humans_detection/include/invisible_humans_detection/: map_scanner.h
src/invisible_humans_detection/launch/: invisible_humans_detection.launch
src/invisible_humans_detection/src/: invisible_humans_detection.cpp
src/pedsim_cohan/: CMakeLists.txt  package.xml
src/pedsim_cohan/launch/: pedsim_cohan.launch
src/pedsim_cohan/rviz/: pedsim_cohan.rviz
src/pedsim_cohan/src/: agent_filter.py  pedsim_to_cohan_agents.py
src/rviz_path_array/: CMakeLists.txt  package.xml
src/rviz_path_array/src/: patharray_display.cpp  patharray_display.h
src/tutorial/: package.xml
src/tutorial/config/: global_costmap_params.yaml  hateb_local_planner_params.yaml
src/tutorial/launch/: cohan_simple.launch
(+119 files in other folders)
